--- a/data/injestion.ipynb
+++ b/data/injestion.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,6 +160,8 @@
     "        for s in sents:\n",
     "            if 'annotation' in s.keys():\n",
     "                del s['annotation']\n",
+    "            if 'annotations' in s.keys():\n",
+    "                del s['annotations']\n",
     "\n",
     "        if len(sents) == 1:\n",
     "            sents += [[], []]\n",
@@ -200,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
